# wikilyze

./: README.md  ingested.hexpat  ingested_header_only.hexpat
brood/: Cargo.toml
brood/src/: algo.rs  commands.rs  data.rs  graph.rs  ingest.rs  main.rs  test.rs  util.rs
brood/src/algo/: edit.rs
brood/src/commands/: export.rs  ingest.rs  leon_wiki_graph.rs  list_links.rs  list_pages.rs  longest_path.rs  longest_shortest_path.rs  path.rs  path_petgraph.rs  pg.rs  philosophy_game.rs  redirects.rs  reexport.rs  show.rs  stats.rs
brood/src/commands/stats/: degrees.rs  redirects.rs
brood/src/data/: adjacency_list.rs  info.rs  store.rs
sift/: .gitignore  pyproject.toml  sift.py
