[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.1.0"
description = "Sift through wikipedia dumps and extract interesting info"
dependencies = ["mwxml >= 0.3.3, < 0.4", "wikitextparser >= 0.51.0, < 0.52"]

[project.scripts]
sift = "sift:main"
