[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.0.0"
description = "Sift through wikipedia dumps and extract interesting info"
dependencies = ["mwxml >= 0.3.3, < 0.4", "wikitextparser >= 0.55.13, < 0.56"]

[project.scripts]
sift = "sift:main"
