[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.0.0"
description = "Sift through wikipedia dumps and extract interesting info"
dependencies = ["mwxml >= 0.3.4, < 0.4", "wikitextparser >= 0.56.2, < 0.57"]

[project.scripts]
sift = "sift:main"
